# dioxus-material

./: Cargo.toml  README.md  icons.sh
.github/workflows/: ci.yml  publish.yml
examples/: button.rs  chip.rs  dialog.rs  icon.rs  navigation_rail.rs  tab_row.rs  text_field.rs
lookbook/: Cargo.toml  Dioxus.toml  Netlify.toml
lookbook/src/: main.rs
lookbook/src/previews/: button.rs  chip.rs  mod.rs  tab_row.rs  text_button.rs  text_field.rs
src/: button.rs  chip.rs  dialog.rs  icon.rs  icon_kind.rs  lib.rs  menu.rs  navigation_rail.rs  ripple.rs  tab.rs  tab_row.rs  text_field.rs  theme.rs  use_ripple.rs
