[package]
name = "dioxus-material"
description = "Animation library for Dioxus"
version = "0.3.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    # "lookbook"
]

[dependencies]
dioxus = "0.6.0-alpha.2"
dioxus-use-mounted = "0.3.0-alpha.3"
dioxus-spring = "0.3.0-alpha.3"
dioxus-resize-observer = "0.3.0-alpha.3"
log = "0.4.22"
dioxus-logger = "0.5.1"

[dev-dependencies]
dioxus = { version = "0.6.0-alpha.2", features = ["web"] }
