[package]
name = "dioxus-material"
description = "Animation library for Dioxus"
version = "0.3.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dioxus-community/dioxus-material"

[workspace]
members = [
    ".",
    # "lookbook"
]

[dependencies]
dioxus = { version = "0.6.0-alpha.3", features = ["web"] }
dioxus-use-mounted = "0.3.0-alpha.4"
dioxus-spring = "0.3.0-alpha.4"
dioxus-resize-observer = "0.3.0-alpha.4"
log = "0.4.22"
dioxus-logger = "0.5.1"
