[package]
name = "dioxus-material"
description = "Animation library for Dioxus"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dioxus-community/dioxus-material"

[workspace]
members = [
    ".",
    # "lookbook"
]

[dependencies]
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-use-mounted = "0.3.0"
dioxus-spring = "0.3.0"
dioxus-resize-observer = "0.3.0"
log = "0.4.22"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
