[package]
name = "dioxus-material-lookbook"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
lookbook = { git = "https://github.com/matthunz/lookbook" }
dioxus-material = { git = "https://github.com/matthunz/dioxus-material" }

